--- a/SinavSistemi/Views/Shared/_Layout.cshtml
+++ b/SinavSistemi/Views/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
 
 
     <!-- Modal -->
-    <form action='#' method='get'>
+    <form action='Home/GirisYap' method='post'>
         <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
@@ -98,11 +98,11 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="exampleInputEmail1">E-posta</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" required placeholder="E-posta adresinizi giriniz">
+                            <input type="email" class="form-control"name="email" id="exampleInputEmail1" required placeholder="E-posta adresinizi giriniz">
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Şifre</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" required placeholder="Şifrenizi Giriniz">
+                            <input type="password" class="form-control"name="password" id="exampleInputPassword1" required placeholder="Şifrenizi Giriniz">
                         </div>
                     </div>
                     <div class="modal-footer">
