--- a/SinavSistemi/Views/Teacher/Index.cshtml
+++ b/SinavSistemi/Views/Teacher/Index.cshtml
@@ -7,19 +7,25 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Öğrenci Sayfası</title>
+    <title>Öğretmen Sayfası</title>
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/bootstrap")
+    @ToastrHelper.ProcessToastrs()
+
 </head>
 <body style="background-image:url(../../Content/img/exam_bg.jpg);background-repeat: no-repeat;">
     <div class="container">
         <div class="row" style="padding-top:15%">
             <div class="col">
                 <div class="jumbotron bg-white">
-                    <h1 class="display-5 " >Profil</h1>
+                    <h1 class="display-5 ">Profil</h1>
                     <p class="lead">Burası senin özel alanın.Burada kendi bilgilerini görebilirsin.</p>
                     <hr class="my-4">
                     <!-- Button trigger modal-->
-                    <a class="btn btn-secondary" data-toggle="modal" data-target="#modalProfileDetail" role="button">Bilgilerimi Görüntüle</a>
+                    <a class="btn btn-secondary text-white" id="showMyData" data-toggle="modal" data-target="#modalProfileDetail" role="button">Bilgilerimi Görüntüle</a>
                 </div>
             </div>
         </div>
@@ -31,7 +37,7 @@
                     <div class="card-body">
                         <h5 class="card-title">En güncel soruları ekle.</h5>
                         <p class="card-text">Öğrencilerin kazansın fark yarat.</p>
-                        @Html.ActionLink("Soru Ekle", "Action", "Teacher", new { @class = "btn btn-warning" })
+                        @Html.ActionLink("Soru Ekle", "AddQuestion", "Teacher", new { @class = "btn btn-warning" })
                     </div>
                 </div>
             </div>
@@ -41,7 +47,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Öğrencilerini Gör</h5>
                         <p class="card-text">Öğrencilerinin sınav sonuçlarını gör.</p>
-                        @Html.ActionLink("Öğrencilerimi Görüntüle","Stats","Teacher", new { @class = "btn btn-dark"})
+                        @Html.ActionLink("Öğrencilerimi Görüntüle", "GetStudents", "Teacher", new { @class = "btn btn-dark" })
                     </div>
                 </div>
             </div>
@@ -63,13 +69,12 @@
                 </div>
                 <!--Body-->
                 <div class="modal-body">
-                    <label class="input-group">Ad: </label>
-                    <label class="input-group">Soyad: </label>
-                    <label class="input-group">TC: </label>
-                    <label class="input-group">Email: </label>
-                    <label class="input-group">Telefon: </label>
-                    <label class="input-group">Dersin Adı: </label>
-                 
+                    <label id="profilAd" class="input-group">Ad: </label>
+                    <label id="profilSoyad" class="input-group">Soyad: </label>
+                    <label id="profilEmail" class="input-group">Email: </label>
+                    <label id="profilTel" class="input-group">Telefon: </label>
+                    <label id="profilDers" class="input-group">Dersin Adı: </label>
+
                 </div>
                 <!--Footer-->
                 <div class="modal-footer">
@@ -78,10 +83,25 @@
             </div>
         </div>
     </div>
-
-    <!-- Modal: modalCart -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+   
+    <script>
+        $(document).ready(function () {
+            $("#showMyData").click(function () {
+                $.ajax({
+                    url: '/Teacher/GetMyData/',
+                    type: 'GET',
+                    dataType: 'json',
+                    success: function (data) {
+                        $("#profilAd").text("Ad: " + data.profilAd);
+                        $("#profilSoyad").text("Soyad: " + data.profilSoyad);
+                        $("#profilEmail").text("Email: " + data.profilEmail);
+                        $("#profilTel").text("Telefon: " + data.profilTel);
+                        $("#profilDers").text("Ders: " + data.profilDers);
+                    }
+                });
+            });
+        });
+    </script>
+   
 </body>
 </html>
