--- a/SinavSistemi/Views/Home/Index.cshtml
+++ b/SinavSistemi/Views/Home/Index.cshtml
@@ -1,3 +1,9 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+@Styles.Render("~/Content/css")
+@Scripts.Render("~/bundles/modernizr")
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/jqueryval")
+@Scripts.Render("~/bundles/bootstrap")
+@ToastrHelper.ProcessToastrs()
