exam operations and views edited

--- a/SinavSistemi/Views/Student/Exam.cshtml
+++ b/SinavSistemi/Views/Student/Exam.cshtml
@@ -1,93 +1,127 @@
-﻿@model IEnumerable<SinavSistemi.Soru>
+﻿@model  IEnumerable<Soru>
 @{
     Layout = null;
 }
 
-    <!DOCTYPE html>
+<!DOCTYPE html>
 
-    <html>
-    <head>
-        <meta name="viewport" content="width=device-width" />
-        <title>Sınav Odası</title>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Sınav Odası</title>
 
-        @Styles.Render("~/Content/css")
-        @Scripts.Render("~/bundles/modernizr")
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/jqueryval")
-        @Scripts.Render("~/bundles/bootstrap")
-        @ToastrHelper.ProcessToastrs()
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/bootstrap")
+    @ToastrHelper.ProcessToastrs()
 
 
-    </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <input type="button" id="btnStartExam" class="btn btn-success float-left" value="Başla" />
-                </div>
-                <div class="col">
-                    <input type="button" id="btnFinishExam" class="btn btn-danger float-right" value="Bitir" />
-                </div>
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+
+            <div class="col">
+                <input type="button" id="btnFinishExam" class="btn btn-danger float-right" value="Bitir" />
             </div>
+        </div>
 
-            <div class="row" id="time">
-                <div class="col container py-1">
-                    <div class="py-2">
-                        <div class="row">
-                            <div class="col-lg-5 mx-auto">
-                                <div class="rounded bg-gradient-4 text-white shadow p-5 text-center mb-5">
-                                    <div id="clock-c" class="countdown py-4"></div>
-                                </div>
+        <div class="row" id="time">
+            <div class="col container py-1">
+                <div class="py-2">
+                    <div class="row">
+                        <div class="col-lg-5 mx-auto">
+                            <div class="rounded bg-gradient-4 text-white shadow p-5 text-center mb-5">
+                                <div id="clock-c" class="countdown py-4"></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-            @Html.BeginForm("Exam", "Student",FormMethod.Post){
-                <div class="row justify-content-center" id="questionArea">
-                    @foreach (var item in Model)
-                    {
-                        String[] cevaplar = item.soruYanlisCevap.Split(',');
-                        <div class="card bg-light mb-3" id="questionCard" style="width: 36rem;">
-                            <div class="card-header">@item.soruMetin</div>
-                            <div class="card-body">
-                                <input type="radio" name="@item.soruID" value= @item.soruCevap /> @item.soruCevap
-                                <br />
-                                <input type="radio" name="@item.soruID" value= @cevaplar[0] /> @cevaplar[0]
-                                <br />
-                                <input type="radio" name="@item.soruID" value= @cevaplar[1] /> @cevaplar[1]
-                                <br />
-                                <input type="radio" name="@item.soruID" value= @cevaplar[2] /> @cevaplar[2]
-                                <br />
-                            </div>
-                        </div>
-                    }
-                </div>
-            }
         </div>
-        <script>
-            $(function () {
-                $("#btnStartExam").click(function () {
-                    function getTimer() {
-                        return new Date(new Date().valueOf() + 1 * 1 * 60 * 60 * 1000);
+
+        <form action="Exam" method="post" id="form">
+            {
+            <div class="row justify-content-center" id="questionArea">
+
+                @{
+                    var qCount = 0;
+                }
+                @foreach (var item in Model)
+                {
+
+                    String[] cevaplar = item.soruYanlisCevap.Split(',');
+                    <div class="card bg-light mb-3" id="questionCard" style="width: 36rem;">
+                        <div class="card-header">@item.soruMetin</div>
+                        <div class="card-body">
+                            @Html.Hidden("cevaplar[" + qCount + "].soruId", @item.soruID)
+                            @Html.RadioButton("cevaplar[" + qCount + "].verilenCevap", @item.soruCevap)
+                            @Html.Label(@item.soruCevap)
+                            <br />
+                            @Html.RadioButton("cevaplar[" + qCount + "].verilenCevap", @cevaplar[0])
+                            @Html.Label(@cevaplar[0])
+                            <br />
+                            @Html.RadioButton("cevaplar[" + qCount + "].verilenCevap", @cevaplar[1])
+                            @Html.Label(@cevaplar[1])
+                            <br />
+                            @Html.RadioButton("cevaplar[" + qCount + "].verilenCevap", @cevaplar[2])
+                            @Html.Label(@cevaplar[2])
+                            <br />
+                        </div>
+                    </div>
+                    qCount++;
+                }
+            </div>
+
+        </form>
+
+    </div>
+    <script>
+        $(function () {
+
+            var isFinish = false;
+
+            var starTimer = function () {
+                function getTimer() {
+                    return new Date(new Date().valueOf() + 1 * 1 * 20 * 60 * 1000);
+                }
+
+                $('#clock-c').countdown(getTimer(), function (event) {
+                    var $this = $(this).html(event.strftime(''
+                        + '<span class="h1 font-weight-bold">%M</span> Min'
+                        + '<span class="h1 font-weight-bold">%S</span> Sec'));
+                    console.log("" + event.strftime("%S"));
+
+                    if (event.strftime("%M") == "00" && event.strftime("%S") == "00") {
+                        if (!isFinish) {
+                            isFinish = true;
+                            return;
+                        }
+
+                        var x = setInterval(function () {
+                            alert("Exam finish.");
+                            $("form").submit();
+                            clearInterval(x);
+
+                        }, 1000)
                     }
 
-                    $('#clock-c').countdown(getTimer(), function (event) {
-                        var $this = $(this).html(event.strftime(''
-                            + '<span class="h1 font-weight-bold">%M</span> Min'
-                            + '<span class="h1 font-weight-bold">%S</span> Sec'));
-                    });
                 });
+            };
+            starTimer();
 
-                $('#btnFinishExam').click(function () {
-                    $('#clock-c').countdown('stop');
-                    $('form').submit();
-                });
+
+
+
+            $('#btnFinishExam').click(function () {
+                $('#clock-c').countdown('stop');
+                $('form').submit();
             });
+        });
 
-        </script>
+    </script>
 
-    </body>
+</body>
 </html>
-    
