--- a/SinavSistemi/Views/Teacher/Index.cshtml
+++ b/SinavSistemi/Views/Teacher/Index.cshtml
@@ -16,11 +16,12 @@
     @ToastrHelper.ProcessToastrs()
 
 </head>
-<body style="background-image:url(../../Content/img/exam_bg.jpg);background-repeat: no-repeat;">
+<body style="background-size:cover; background-image:url(../../Content/img/school.jpeg);background-repeat: no-repeat;">
     <div class="container">
         <div class="row" style="padding-top:15%">
             <div class="col">
                 <div class="jumbotron bg-white">
+                    @Html.ActionLink("Çıkış Yap", "LogOut", "Teacher", new { @class = "btn btn-danger float-right" })
                     <h1 class="display-5 ">Profil</h1>
                     <p class="lead">Burası senin özel alanın.Burada kendi bilgilerini görebilirsin.</p>
                     <hr class="my-4">
